[project]
name = "juena"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
version = "0.1.0"
description = "A general-purpose chatbot template for building LangGraph-based chatbots"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "langchain[openai]>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "streamlit>=1.28.0",
    "pydantic[all]>=2.11.2,<3.0.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.10",
    "plotly>=6.5.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juena"]
